--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
     <nav class="navbar">
         <div class="brand">
-            <h2>YNA<span>TTT</span></h2>
+            <h2>YNA<span>TTTT</span></h2>
             </div>
        <ul class="menu">
            <li ><a class="active" href="#">home</a></li>
