--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="brand">
             <h2>YNA<span>TTT</span></h2>
             </div>
-       <ul class="menu">
+       <ul class="menus">
            <li ><a class="active" href="#">home</a></li>
            <li><a href="#">about me</a></li>
            <li><a href="#">portfolio</a></li>
